完成所有暂定功能
