# src/resource/api.yml
@@ -5,11 +5,13 @@ info:
   license:
     name: MIT
 paths:
-  /items:
+  /item:
     get:
       summary: cart items
       description: get cart's items
       operationId: showCartItems
+      tags:
+        - item
       responses:
         '200':
           description: An array of items
@@ -25,11 +27,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /items/{productId}:
+  /item/{productId}:
     post:
       summary: add item
       description: add new item
       operationId: addItem
+      tags:
+        - item
       parameters:
         - name: productId
           in: path
@@ -51,12 +55,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Message'
+                $ref: '#/components/schemas/Item'
 
 
     put:
       description: update item quantity
-      operationId: "updateItem"
+      operationId: updateItem
+      tags:
+        - item
       parameters:
         - name: productId
           in: path
@@ -79,12 +85,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Message'
+                $ref: '#/components/schemas/Item'
 
     delete:
       summary: delete item
       description: delete the item whose id is the product id
       operationId: deleteItem
+      tags:
+        - item
       parameters:
         - name: productId
           in: path
@@ -99,9 +107,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Message'
+                $ref: '#/components/schemas/Item'
 
-  /products:
+  /product:
     get:
       summary: List all products
       operationId: listProducts
